--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 nightscout:
   image: dhermanns/rpi-nightscout:0.9.2
   environment:
-    TZ: Europe/Berlin
+    TZ: US/Eastern
     MONGO_CONNECTION: mongodb://mongo:27017/nightscout
     API_SECRET: nightscout2000
     BG_HIGH: 220
